--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: any
   firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
